@@ -1,5 +1,7 @@
 ===v4.5.6===
  * Moved the default icon type into its own type file, because it technically is nothing more than another icon type.
+ * Added clarification for icon types that will accept no name to check everything.
+ * Added a help popup for the stop watch icon.
  * Bug Fixes:
  ** Implemented a method to determine if an export string has become corrupt due to the source's formatting
  ** Fixed overlay bar frame levels
